--- a/.github/workflow/python-app.yml
+++ b/.github/workflow/python-app.yml
@@ -1,16 +1,35 @@
-image: python:3.8
+name: Python application
 
-stages:
-  - test
+on:
+  push:
+    branches: [ main ]
+  pull_request:
+    branches: [ main ]
 
-before_script:
-  - pip install -r requirements.txt
-  - pip install pylint coverage
-  - pip install pytest
+jobs:
+  build:
+    runs-on: macos-latest
 
-test:
-  stage: test
-  script:
-    - pylint *.py
-    - coverage run test.py
-    - coverage report
+    steps:
+    - name: Checkout repository
+      uses: actions/checkout@v2
+
+    - name: Set up Python
+      uses: actions/setup-python@v2
+      with:
+        python-version: '3.8'
+
+    - name: Install dependencies
+      run: |
+        python -m pip install --upgrade pip
+        if [ -f requirements.txt ]; then pip install -r requirements.txt; fi
+        pip install pylint coverage
+
+    - name: Lint code
+      run: |
+        pylint main.py transform.py test.py
+
+    - name: Run tests and coverage
+      run: |
+        coverage run test.py
+        coverage report
