--- a/.github/workflow/python-app.yml
+++ b/.github/workflow/python-app.yml
@@ -1,15 +1,36 @@
-image: python:3.8
+name: Python application test workflow
 
-stages:
-  - test
+on: [push, pull_request]
 
-before_script:
-  - pip install -r requirements.txt
-  - pip install pylint coverage
+jobs:
+  build:
+    runs-on: ubuntu-latest
+    steps:
+    - name: Check out repo content
+      uses: actions/checkout@v2
+      
+    - name: Set up Python environment
+      uses: actions/setup-python@v2
+      with:
+        python-version: 3.8
 
-test:
-  stage: test
-  script:
-    - pylint *.py
-    - coverage run test.py
-    - coverage report
+    - name: Install dependencies
+      run: |
+        python -m pip install --upgrade pip
+        pip install pytest pylint coverage
+
+    - name: Lint with pylint
+      run: |
+        pylint main.py test.py transform.py
+      continue-on-error: true
+      env:
+        TERM: xterm
+
+    - name: Run tests with pytest
+      run: |
+        pytest test.py
+
+    - name: Run coverage
+      run: |
+        coverage run -m pytest test.py
+        coverage report
